--- a/src/views/applied.handlebars
+++ b/src/views/applied.handlebars
@@ -8,9 +8,9 @@
             <a href="{{this.link}}">{{this.text}}</a>
         {{/each}}
     </aside>
-    <section class="profile-jobs-list">
+    <section>
         <h2>Applied jobs</h2>
-        <div class="item">
+        <div class="job-item">
             <div>
                 <a href="/job">Software Developer</a><br>
                 <span class="company">Google</span>
@@ -18,7 +18,7 @@
             <span>London</span>
             <span>03/01/2022</span>
         </div>
-        <div class="item">
+        <div class="job-item">
             <div>
                 <a href="/job">Warehouse Worker</a><br>
                 <span class="company">Amazon</span>
