--- a/src/views/posted.handlebars
+++ b/src/views/posted.handlebars
@@ -1,12 +1,16 @@
-<main id="profile">
+<main class="profile">
+    <section id="aside-toggler">
+        <div>Profile</div>
+        <div class="arrow"></div>
+    </section>
     <aside>
         {{#each links}}
-            <div><a href="{{this.link}}">{{this.text}}</a></div>
+            <a href="{{this.link}}">{{this.text}}</a>
         {{/each}}
     </aside>
-    <section class="profile-jobs-list">
+    <section>
         <h2>Posted jobs</h2>
-        <div class="item">
+        <div class="job-item">
             <div>
                 <a href="/job">Software Developer</a><br>
                 <span class="company">Google</span>
@@ -14,7 +18,7 @@
             <span>London</span>
             <span>03/01/2022</span>
         </div>
-        <div class="item">
+        <div class="job-item">
             <div>
                 <a href="/job">Warehouse Worker</a><br>
                 <span class="company">Amazon</span>
@@ -24,3 +28,4 @@
         </div>
     </section>
 </main>
+<script src="javascript/aside.js"></script>
