--- a/src/views/job_form.handlebars
+++ b/src/views/job_form.handlebars
@@ -1,4 +1,4 @@
-<main id="job-form">
+<main class="job-form">
     <h2>{{heading}}</h2>
     <form action="{{action}}" method="post">
         <label for="title">Title</label>
