--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -15,8 +15,10 @@
             </div>
         </header>
         <nav>
-            <a href="/login">Login</a>
-            <a href="/employer">Employer</a>
+            <div>
+                <a href="/login">Login</a>
+                <a href="/employer">Employer</a>
+            </div>
         </nav>
         {{{body}}}
         <footer>&copy; Olegs Maklecovs 2022</footer>
