--- a/src/views/saved.handlebars
+++ b/src/views/saved.handlebars
@@ -1,6 +1,6 @@
 <main class="profile">
     <section id="aside-toggler">
-        <div>Profile</div>
+        <div>Saved jobs</div>
         <div class="arrow"></div>
     </section>
     <aside>
