--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -1,13 +1,19 @@
 <main class="index">
-    <h2>Search for jobs</h2>
-    <form action="/list" method="get">
-        <input type="text" name="job_title">
-        <select name="city">
-            <option value="London">London</option>
-            <option value="Birmingham">Birmingham</option>
-            <option value="Manchester">Manchester</option>
-            <option value="Cambridge">Cambridge</option>
-        </select>
-        <input type="submit" value="Search">
-    </form>
+    <section>
+        <h2>Search for jobs</h2>
+        <form action="/list" method="get" class="search-form">
+            <input type="text" name="search-query">
+            <select name="city">
+                <option value="London">London</option>
+                <option value="Birmingham">Birmingham</option>
+                <option value="Manchester">Manchester</option>
+                <option value="Cambridge">Cambridge</option>
+            </select>
+            <input type="submit" value="Search">
+        </form>
+    </section>
+    <section>
+        <h2>Welcome!</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci error, doloremque ut odio quas corrupti totam beatae doloribus at a nulla vel ad aliquam. Quia fugiat numquam eius tempora ad vero, quod fugit. Laborum ipsum, fugiat maxime illo reprehenderit repudiandae similique obcaecati libero mollitia magni iusto debitis aliquid sequi impedit facere, placeat, ea deleniti omnis dolorum consequatur vero provident. Quas consequuntur quaerat hic mollitia asperiores temporibus facilis maiores sed enim eveniet animi, necessitatibus laudantium, beatae soluta, atque ducimus perferendis doloribus distinctio voluptas deserunt at totam voluptates dolore? Itaque, soluta ipsam quos quas eveniet unde, nobis, incidunt vel amet hic nisi?</p>
+    </section>
 </main>
