--- a/src/views/list.handlebars
+++ b/src/views/list.handlebars
@@ -1,7 +1,7 @@
 <main class="list">
     <section>
-        <form action="/jobs" method="get">
-            <input type="text" name="search-query" size="40">
+        <form action="/jobs" method="get" class="search-form">
+            <input type="text" name="search-query">
             <select name="city">
                 <option value="London">London</option>
                 <option value="Birmingham">Birmingham</option>
@@ -13,28 +13,28 @@
     </section>
     <section class="jobs-list">
         <div class="job-item">
-            <div class="job-title">
+            <div>
                 <a href="/job">Software Developer</a><br>
                 <span class="company">Google</span>
             </div>
-            <span class="job-city">London</span>
-            <span class="job-date">03/01/2022</span>
+            <span>London</span>
+            <span>03/01/2022</span>
         </div>
         <div class="job-item">
-            <div class="job-title">
+            <div>
                 <a href="/job">Software Developer</a><br>
                 <span class="company">Google</span>
             </div>
-            <span class="job-city">London</span>
-            <span class="job-date">03/01/2022</span>
+            <span>London</span>
+            <span>03/01/2022</span>
         </div>
         <div class="job-item">
-            <div class="job-title">
+            <div>
                 <a href="/job">Software Developer</a><br>
                 <span class="company">Google</span>
             </div>
-            <span class="job-city">London</span>
-            <span class="job-date">03/01/2022</span>
+            <span>London</span>
+            <span>03/01/2022</span>
         </div>
     </section>
 </main>
