--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,14 +44,10 @@ input[type=submit]:hover, button:hover {
     grid-template-columns: 1fr 1fr;
     grid-gap: 0.5em;
 }
-.search-form input[type="text"] {
+.search-query {
     grid-column: 1 / 3;
 }
-.search-form input[type="select"] {
-    grid-column: 1 / 2;
-}
 .search-form input[type="submit"] {
-    grid-column: 2 / 3;
     justify-self: right;
 }
 
@@ -233,16 +229,12 @@ main {
         background: #e60;
     }
     .search-form {
-        grid-template-columns: 4fr 1fr;
+        grid-template-columns: 3fr 1fr;
     }
-    .search-form input[type="text"] {
+    .search-query {
         grid-column: 1 / 2;
     }
-    .search-form input[type="select"] {
-        grid-column: 2 / 3;
-    }
     .search-form input[type="submit"] {
-        grid-column: 1 / 3;
         justify-self: left;
     }
 
@@ -292,17 +284,7 @@ main {
 
 @media screen and (min-width: 780px) {
     .search-form {
-        grid-template-columns: 4fr 1fr 1fr;
-    }
-    .search-form input[type="text"] {
-        grid-column: 1 / 5;
-    }
-    .search-form input[type="select"] {
-        grid-column: 5 / 6;
-    }
-    .search-form input[type="submit"] {
-        grid-column: 6 / 7;
-        justify-self: stretch;
+        grid-template-columns: 3fr 1fr auto;
     }
 
     header, nav div, main, footer {
@@ -316,10 +298,4 @@ main {
         margin-top: 1em;
         margin-bottom: 1em;
     }
-
-    /* .index {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-gap: 1em;
-    } */
 }
