--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -15,9 +15,9 @@
         <h2>Change password</h2>
         <form action="/profile" method="post">
             <label for="password">New password</label>
-            <input type="password" name="password" size="26">
+            <input type="password" name="password">
             <label for="confirmpassword">Confirm new password</label>
-            <input type="password" name="confirmpassword" size="26">
+            <input type="password" name="confirmpassword">
             <input type="submit" value="Submit">
         </form>
     </section>
