--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -1,5 +1,14 @@
 <main class="register">
     <h2>{{heading}}</h2>
+    {{#if errs}}
+    <article class="errors">
+        <ul>
+            {{#each errs}}
+            <li>{{this}}</li>
+            {{/each}}
+        </ul>
+    </article>
+    {{/if}}
     <form action="{{action}}" method="post">
         {{#if is_employer}}
         <label for="companyname">Company name</label>
