--- a/public/css/style.css
+++ b/public/css/style.css
@@ -100,6 +100,11 @@ main {
     margin: 0 0.5em;
 }
 
+.gray-error {
+    color: #777;
+    font-style: italic;
+}
+
 /* Login screen */
 .login form {
     display: grid;
