Company name now displays correctly in the list of jobs, added new method to database class to make it possible

--- a/src/views/list.handlebars
+++ b/src/views/list.handlebars
@@ -11,7 +11,7 @@
         {{#each jobs}}
         <div class="job-item">
             <div>
-                <a href="/job?id={{this.id}}">{{this.title}}</a>
+                <a href="/job?id={{this.id}}">{{this.title}}</a><br>
                 <span class="company">{{this.company_name}}</span>
             </div>
             <span>{{this.city}}</span>
