Fixed search bar on jobs list page

--- a/src/views/list.handlebars
+++ b/src/views/list.handlebars
@@ -1,8 +1,8 @@
 <main class="list">
     <section>
-        <form action="/jobs" method="get" class="search-form">
-            <input type="text" name="search-query" class="search-query" placeholder="Job title">
-            <input type="text" name="search-city" class="search-city" placeholder="City">
+        <form action="/list" method="get" class="search-form">
+            <input type="text" name="search_query" class="search-query" placeholder="Job title">
+            <input type="text" name="search_city" class="search-city" placeholder="City">
             <input type="submit" value="Search">
         </form>
     </section>
