--- a/src/views/job.handlebars
+++ b/src/views/job.handlebars
@@ -8,9 +8,13 @@
     <section>
         <p>{{job.[0].description}}</p>
     </section>
+    {{#if isLoggedIn}}
+    {{#unless isEmployer}}
     <form action="/job" method="post">
         <label for="upload-file">Upload your CV</label><br>
         <input type="file" name="upload-file"><br>
         <input type="submit" value="Apply">
     </form>
+    {{/unless}}
+    {{/if}}
 </main>
