--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -10,10 +10,10 @@
     </aside>
     <section class="profile-content">
         <h2>Profile</h2>
-        <p>{{name_or_company}}: John Doe</p>
-        <p>Email: john@gmail.com</p>
+        <p>{{name_or_company}}</p>
+        <p>{{email}}</p>
         <h2>Change password</h2>
-        <form action="/profile" method="post">
+        <form action="{{action}}" method="post">
             <label for="password">New password</label>
             <input type="password" name="password">
             <label for="confirmpassword">Confirm new password</label>
