--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -17,7 +17,11 @@
         <nav>
             {{#if is_logged_in}}
             <div>
+                {{#if is_employer}}
+                <a href="/profile-employer">Profile</a>
+                {{else}}
                 <a href="/profile">Profile</a>
+                {{/if}}
                 <a href="/logout">Log out</a>
             </div>
             {{else}}
