--- a/src/views/applicants.handlebars
+++ b/src/views/applicants.handlebars
@@ -10,22 +10,28 @@
     </aside>
     <section>
         <h2>Applicants</h2>
+        {{#if applicants}}
+        {{#each applicants}}
         <div class="job-item">
             <div>
-                <span>John Doe</span><br>
-                <span class="company">Software Developer</span>
+                <span>{{this.first_name}} {{this.last_name}}</span><br>
+                <span class="company">{{this.company_name}}</span>
             </div>
             <a href="/download-cv">CV</a>
-            <span>03/01/2022</span>
+            <span>{{this.date}}</span>
         </div>
-        <div class="job-item">
+        {{/each}}
+        {{else}}
+        <span class="gray-error">No applicants found</span>
+        {{/if}}
+        {{!-- <div class="job-item">
             <div>
                 <span>Rick Grimes</span><br>
                 <span class="company">Warehouse Worker</span>
             </div>
             <a href="/download-cv">CV</a>
             <span>03/01/2022</span>
-        </div>
+        </div> --}}
     </section>
 </main>
 <script src="javascript/aside.js"></script>
