Create job feature, slightly modified create job method in database class

--- a/src/views/job_form.handlebars
+++ b/src/views/job_form.handlebars
@@ -4,12 +4,7 @@
         <label for="title">Title</label>
         <input type="text" name="title">
         <label for="city">City</label>
-        <select name="city">
-            <option value="london">London</option>
-            <option value="birmingham">Birmingham</option>
-            <option value="manchester">Manchester</option>
-            <option value="leicester">Leicester</option>
-        </select>
+        <input type="text" name="city">
         <label for="description">Description</label>
         <textarea name="description" rows="20"></textarea>
         <div><input type="submit" value="Submit"></div>
