--- a/src/views/job_form.handlebars
+++ b/src/views/job_form.handlebars
@@ -1,5 +1,14 @@
 <main class="job-form">
     <h2>{{heading}}</h2>
+    {{#if errs}}
+    <article class="errors">
+        <ul>
+            {{#each errs}}
+            <li>{{this}}</li>
+            {{/each}}
+        </ul>
+    </article>
+    {{/if}}
     <form action="{{action}}" method="post">
         <label for="title">Title</label>
         <input type="text" name="title">
