--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -19,6 +19,7 @@
             <div>
                 {{#if is_employer}}
                 <a href="/profile-employer">Profile</a>
+                <a href="/create">Create job</a>
                 {{else}}
                 <a href="/profile">Profile</a>
                 {{/if}}
