--- a/src/views/job.handlebars
+++ b/src/views/job.handlebars
@@ -1,12 +1,22 @@
 <main class="job">
     <section class="job-details">
-        <h2>{{job.[0].title}}</h2>
-        <span class="company">{{job.[0].company_name}}</span>
-        <span>{{job.[0].date}}</span>
-        <span>{{job.[0].city}}</span>
+        <div class="job-heading">
+            <h2>{{job.title}}</h2>
+            {{#if is_logged_in}}
+            {{#if is_correct_employer}}
+            <div class="job-controls">
+                <a href="/edit?id={{job.id}}">Edit</a>
+                <a href="/delete?id={{job.id}}">Delete</a>
+            </div>
+            {{/if}}
+            {{/if}}
+        </div>
+        <span class="company">{{job.company_name}}</span>
+        <span>{{job.date}}</span>
+        <span>{{job.city}}</span>
     </section>
     <section>
-        <p>{{job.[0].description}}</p>
+        <p>{{job.description}}</p>
     </section>
     {{#if is_logged_in}}
     {{#unless is_employer}}
