--- a/src/views/job.handlebars
+++ b/src/views/job.handlebars
@@ -15,7 +15,7 @@
         <span>{{job.date}}</span>
         <span>{{job.city}}</span>
     </section>
-    <section>
+    <section class="description">
         <p>{{job.description}}</p>
     </section>
     {{#if is_logged_in}}
