Installed Multer, file upload partially done, still have some bugs to fix

--- a/src/views/job.handlebars
+++ b/src/views/job.handlebars
@@ -30,7 +30,7 @@
     </section>
     {{#if is_logged_in}}
     {{#unless is_employer}}
-    <form action="/job" method="post">
+    <form action="{{action}}" method="post" enctype="multipart/form-data">
         <label for="upload-file">Upload your CV</label><br>
         <input type="file" name="upload-file"><br>
         <input type="submit" value="Apply">
