--- a/src/views/applicants.handlebars
+++ b/src/views/applicants.handlebars
@@ -17,7 +17,9 @@
                 <span>{{this.first_name}} {{this.last_name}}</span><br>
                 <span class="company">{{this.company_name}}</span>
             </div>
-            <a href="/download-cv">CV</a>
+            <div>
+                <a href="/download-cv?job={{this.job_id}}&seeker={{this.id}}">CV</a>
+            </div>
             <span>{{this.date}}</span>
         </div>
         {{/each}}
