--- a/src/views/applicants.handlebars
+++ b/src/views/applicants.handlebars
@@ -15,7 +15,7 @@
         <div class="job-item">
             <div>
                 <span>{{this.first_name}} {{this.last_name}}</span><br>
-                <span class="company">{{this.company_name}}</span>
+                <a href="/job?id={{this.job_id}}" class="applicants-link">{{this.title}}</a>
             </div>
             <div>
                 <a href="/download-cv?job={{this.job_id}}&seeker={{this.id}}">CV</a>
@@ -26,14 +26,6 @@
         {{else}}
         <span class="gray-error">No applicants found</span>
         {{/if}}
-        {{!-- <div class="job-item">
-            <div>
-                <span>Rick Grimes</span><br>
-                <span class="company">Warehouse Worker</span>
-            </div>
-            <a href="/download-cv">CV</a>
-            <span>03/01/2022</span>
-        </div> --}}
     </section>
 </main>
 <script src="javascript/aside.js"></script>
