Fixed a bug with employer registration, fixed handlebars registration form issues and removed lorem ipsum from index page

--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -10,7 +10,7 @@
     </article>
     {{/if}}
     <form action="{{action}}" method="post">
-        {{#if is_employer}}
+        {{#if is_employer_register}}
         <label for="companyname">Company name</label>
         <input type="text" name="companyname">
         {{else}}
